Fix: correct sidenav covering hamburger on large phones

--- a/static/additional-css/main.css
+++ b/static/additional-css/main.css
@@ -76,29 +76,6 @@ html, body {
     .open {
         transform: translate(0,0);
     }
-
-    /* Position and style the close button (top right corner) */
-    .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-    }
-
-    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-    .main {
-        transition: margin-left .5s;
-        padding: 20px;
-    }
-
-    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-    @media screen and (max-height: 450px) {
-        .sidenav {padding-top: 15px;}
-        .sidenav a {font-size: 18px;}
-    }
-    
-
 }
 
 
@@ -150,7 +127,7 @@ html, body {
     }
 
     .sidenav {
-        top: 10vw;
+        top: 21.8vw;
     }
 }
 
@@ -167,7 +144,9 @@ html, body {
     }
 
     .sidenav {
-        top: 10vw;
+        top: 13vw;
+        flex: 0 0 100%;
+        max-width: 100%
     }
 }
 
@@ -184,10 +163,6 @@ html, body {
     height: 10vw;
     font-size: 3.5em;
     }
-
-    .sidenav {
-        top: 10vw;
-    }
 }
 
 /*Tablet horizontal*/
@@ -200,10 +175,6 @@ html, body {
     .top-title {
     height: 8vw;
     font-size: 3.5em;
-    }
-
-    .sidenav {
-        top: 10vw;
     }
 }
 
